# ai_session_tools

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml  run_ci_local.sh  test_ai_session_tools.py
.github/workflows/: ci.yml  publish.yml
ai_session_tools/: __init__.py  cli.py  config.py  engine.py  extractors.py  filters.py  formatters.py  models.py  types.py
ai_session_tools/analysis/: __init__.py  analyzer.py  codebook.py  extract.py  graph.py  orchestrator.py  pipeline_state.py  vocab.py
ai_session_tools/sources/: __init__.py  aistudio.py  gemini_cli.py
tests/: test_ai_session_tools.py  test_demo.py
tests/aise-demo/: conftest.py
tests/aise-demo/projects/-Users-demo-datapipe/: cafe0001-cafe-cafe-cafe-000000000003.jsonl  cafe0001-cafe-cafe-cafe-000000000004.jsonl
tests/aise-demo/projects/-Users-demo-mlresearch/: cafe0001-cafe-cafe-cafe-000000000005.jsonl  cafe0001-cafe-cafe-cafe-000000000006.jsonl  cafe0001-cafe-cafe-cafe-000000000007.jsonl  cafe0001-cafe-cafe-cafe-000000000008.jsonl
tests/aise-demo/projects/-Users-demo-webauth/: cafe0001-cafe-cafe-cafe-000000000001.jsonl  cafe0001-cafe-cafe-cafe-000000000002.jsonl
tests/aise-demo/recovery/session_cafe0001-cafe-cafe-cafe-000000000001/: jwt.py  routes.py  test_auth.py
tests/aise-demo/recovery/session_cafe0001-cafe-cafe-cafe-000000000002/: jwt.py  test_auth.py
tests/aise-demo/recovery/session_cafe0001-cafe-cafe-cafe-000000000003/: transformer.py
tests/aise-demo/recovery/session_cafe0001-cafe-cafe-cafe-000000000004/: transformer.py
